doc: Remove _() macro

gtkdoc cannot generate the documentation for _() macro:
https://bugzilla.gnome.org/show_bug.cgi?id=753052